migration-result/ver/16.x/database-access/guides/cockroachdb-self-hosted.mdx
---
title: Database Access with Self-Hosted CockroachDB
description: How to configure Teleport database access with self-hosted CockroachDB.
version: '16.x'
---

Teleport can provide secure access to CockroachDB via the  [Teleport Database
Service](/ver/16.x/database-access/introduction). This allows for
fine-grained access control through [Teleport's RBAC](/ver/16.x/database-access/rbac).

In this guide, you will:

1. Configure an CockroachDB with mutual TLS authentication.
2. Join the CockroachDB database to your Teleport cluster.
3. Connect to the CockroachDB database via the Teleport Database Service.

<Tabs>
  <Tab title="Self-Hosted">
    ![Teleport Database Access CockroachDB Self-Hosted](../../../../../assets/cockroachdb_selfhosted-dbbcf30e46.png)
  </Tab>

  <Tab title="Teleport Enterprise Cloud">
    ![Teleport Database Access CockroachDB Cloud](../../../../../assets/cockroachdb_cloud-1ca5b46ba3.png)
  </Tab>
</Tabs>

## Prerequisites

<Tabs>
  <Tab title="Teleport Community Edition">
    - A running Teleport cluster. For details on how to set this up, see the
      [Getting Started](/ver/16.x/index) guide.

    - The `tctl` admin tool and `tsh` client tool version >= 15.0.0-dev.

      See [Installation](/ver/16.x/installation) for details.

    To check version information, run the `tctl version` and `tsh version` commands.
    For example:

    ```code
    $ tctl version
    # Teleport v15.0.0-dev git:api/14.0.0-gd1e081e go1.21
      
    $ tsh version
    # Teleport v15.0.0-dev go1.21
    Proxy version: 15.0.0-dev
    Proxy: teleport.example.com
    ```
  </Tab>

  <Tab title="Teleport Team">
    - A Teleport Team account. If you don't have an account, sign
      up to begin your [free trial](https://goteleport.com/signup/).

    - The Enterprise `tctl` admin tool and `tsh` client tool, version >= 14.3.3.

      You can download these tools from the [Cloud Downloads page](/ver/16.x/choose-an-edition/teleport-cloud/downloads).

    To check version information, run the `tctl version` and `tsh version` commands.
    For example:

    ```code
    $ tctl version
    # Teleport Enterprise v14.3.3 git:api/14.0.0-gd1e081e go1.21
      
    $ tsh version
    # Teleport v14.3.3 go1.21
    Proxy version: 14.3.3
    Proxy: teleport.example.com
    ```
  </Tab>

  <Tab title="Teleport Enterprise">
    - A running Teleport Enterprise cluster. For details on how to set this up, see the Enterprise
      [Getting Started](/ver/16.x/choose-an-edition/teleport-enterprise/introduction) guide.

    - The Enterprise `tctl` admin tool and `tsh` client tool version >=
      15.0.0-dev.

      You can download these tools by visiting your [Teleport
      account workspace](https://teleport.sh).

    To check version information, run the `tctl version` and `tsh version` commands.
    For example:

    ```code
    $ tctl version
    # Teleport Enterprise v15.0.0-dev git:api/14.0.0-gd1e081e go1.21
      
    $ tsh version
    # Teleport v15.0.0-dev go1.21
    Proxy version: 15.0.0-dev
    Proxy: teleport.example.com
    ```
  </Tab>

  <Tab title="Teleport Enterprise Cloud">
    - A Teleport Enterprise Cloud account. If you don't have an account,
      sign up to begin a [free trial](https://goteleport.com/signup/)  of Teleport Team
      and upgrade to Teleport Enterprise Cloud.

    - The Enterprise `tctl` admin tool and `tsh` client tool version >= 14.3.3.

      You can download these tools from the [Cloud Downloads page](/ver/16.x/choose-an-edition/teleport-cloud/downloads).

    To check version information, run the `tctl version` and `tsh version` commands.
    For example:

    ```code
    $ tctl version
    # Teleport Enterprise v14.3.3 git:api/14.0.0-gd1e081e go1.21
      
    $ tsh version
    # Teleport v14.3.3 go1.21
    Proxy version: 14.3.3
    Proxy: teleport.example.com
    ```
  </Tab>
</Tabs>

- CockroachDB cluster.
- A host, e.g., an Amazon EC2 instance, where you will run the Teleport Database
  Service.
- To check that you can connect to your Teleport cluster, sign in with `tsh login`, then
  verify that you can run `tctl` commands using your current credentials.
  `tctl` is supported on macOS and Linux machines.

  For example:
  ```code
  $ tsh login --proxy=teleport.example.com --user=email@example.com
  $ tctl status
  # Cluster  teleport.example.com
  # Version  15.0.0-dev
  # CA pin   sha256:abdc1245efgh5678abdc1245efgh5678abdc1245efgh5678abdc1245efgh5678
  ```
  If you can connect to the cluster and run the `tctl status` command, you can use your
  current credentials to run subsequent `tctl` commands from your workstation.
  If you host your own Teleport cluster, you can also run `tctl` commands on the computer that
  hosts the Teleport Auth Service for full permissions.

## Step 1/4. Set up the Teleport Database Service

The Database Service requires a valid auth token to connect to the cluster. Generate
one by running the following command against your Teleport Auth Service and save
it in `/tmp/token` on the node that will run the Database Service:

```code
$ tctl tokens add --type=db
```

Install and configure Teleport where you will run the Teleport Database Service:

<Tabs>
  <Tab title="Linux Server">
    Select an edition, then follow the instructions for that edition to install Teleport.

    <Tabs dropdownView dropdownCaption="Teleport Edition">
      <Tab title="Teleport Community Edition">
        The following command updates the repository for the package manager on the
        local operating system and installs the provided Teleport version:

        ```code
        $ curl https://goteleport.com/static/install.sh | bash -s 15.0.0-dev
        ```
      </Tab>

      <Tab title="Teleport Team">
        <Tabs>
          <Tab title="Debian 9+/Ubuntu 16.04+ (apt)">
            Add the Teleport repository to your repository list:

            ```code
            # Download Teleport's PGP public key
            $ sudo curl https://apt.releases.teleport.dev/gpg \
            -o /usr/share/keyrings/teleport-archive-keyring.asc
            # Source variables about OS version
            $ source /etc/os-release
            # Add the Teleport APT repository for cloud.
            $ echo "deb [signed-by=/usr/share/keyrings/teleport-archive-keyring.asc] \
            https://apt.releases.teleport.dev/${ID?} ${VERSION_CODENAME?} stable/cloud" \
            | sudo tee /etc/apt/sources.list.d/teleport.list > /dev/null

            $ sudo apt-get update
            $ sudo apt-get install teleport-ent=14.3.3
            $ sudo apt-get install teleport-ent-updater
            ```
          </Tab>

          <Tab title="Amazon Linux 2/RHEL 7/CentOS 7 (yum)">
            ```code
            # Source variables about OS version
            $ source /etc/os-release
            # Add the Teleport YUM repository for cloud.
            # First, get the OS major version from $VERSION_ID so this fetches the correct
            # package version.
            $ VERSION_ID=$(echo $VERSION_ID | grep -Eo "^[0-9]+")
            $ sudo yum install -y yum-utils
            $ sudo yum-config-manager --add-repo "$(rpm --eval "https://yum.releases.teleport.dev/$ID/$VERSION_ID/Teleport/%{_arch}/stable/cloud/teleport-yum.repo")"
            $ sudo yum install teleport-ent-14.3.3
            $ sudo yum install teleport-ent-updater
            #
            # Tip: Add /usr/local/bin to path used by sudo (so 'sudo tctl users add' will work as per the docs)
            # echo "Defaults    secure_path = /sbin:/bin:/usr/sbin:/usr/bin:/usr/local/bin" > /etc/sudoers.d/secure_path
            ```
          </Tab>

          <Tab title="Amazon Linux 2023/RHEL 8+ (dnf)">
            ```code
            # Source variables about OS version
            $ source /etc/os-release
            # Add the Teleport YUM repository for cloud.
            # First, get the OS major version from $VERSION_ID so this fetches the correct
            # package version.
            $ VERSION_ID=$(echo $VERSION_ID | grep -Eo "^[0-9]+")
            # Use the dnf config manager plugin to add the teleport RPM repo
            $ sudo dnf config-manager --add-repo "$(rpm --eval "https://yum.releases.teleport.dev/$ID/$VERSION_ID/Teleport/%{_arch}/stable/cloud/teleport-yum.repo")"

            # Install teleport
            $ sudo dnf install teleport-ent-14.3.3
            $ sudo dnf install teleport-ent-updater

            # Tip: Add /usr/local/bin to path used by sudo (so 'sudo tctl users add' will work as per the docs)
            # echo "Defaults    secure_path = /sbin:/bin:/usr/sbin:/usr/bin:/usr/local/bin" > /etc/sudoers.d/secure_path
            ```
          </Tab>

          <Tab title="SLES 12 SP5+ and 15 SP5+ (zypper)">
            ```code
            # Source variables about OS version
            $ source /etc/os-release
            # Add the Teleport Zypper repository for cloud.
            # First, get the OS major version from $VERSION_ID so this fetches the correct
            # package version.
            $ VERSION_ID=$(echo $VERSION_ID | grep -Eo "^[0-9]+")
            # Use Zypper to add the teleport RPM repo
            $ sudo zypper addrepo --refresh --repo $(rpm --eval "https://zypper.releases.teleport.dev/$ID/$VERSION_ID/Teleport/%{_arch}/stable/cloud/teleport-zypper.repo")

            # Install teleport
            $ sudo zypper install teleport-ent=14.3.3
            $ sudo zypper install teleport-ent-updater
            ```
          </Tab>
        </Tabs>

        ### OS repository channels

        The following channels are available for APT, YUM, and Zypper repos. They may be used in place of
        `stable/v15` anywhere in the Teleport documentation.

        | Channel name     | Description                                                                  |
        | ---------------- | ---------------------------------------------------------------------------- |
        | `stable/<major>` | Receives releases for the specified major release line, i.e. `v15`           |
        | `stable/cloud`   | Rolling channel that receives releases compatible with current Cloud version |
        | `stable/rolling` | Rolling channel that receives all published Teleport releases                |

        <Accordion title="Is my Teleport instance compatible with Teleport Team?">
          Before installing a `teleport` binary with a version besides
          v14, read our compatibility rules to ensure that the
          binary is compatible with Teleport Cloud.

          Teleport uses [Semantic Versioning](https://semver.org/). Version numbers
          include a major version, minor version, and patch version, separated by dots.
          When running multiple `teleport` binaries within a cluster, the following rules
          apply:

          - **Patch and minor** versions are always compatible, for example, any 8.0.1
            component will work with any 8.0.3 component and any 8.1.0 component will work
            with any 8.3.0 component.
          - Servers support clients that are one major version behind, but do not support
            clients that are on a newer major version. For example, an 8.x.x Proxy Service
            instance is compatible with 7.x.x agents and 7.x.x `tsh`, but we don't
            guarantee that a 9.x.x agent will work with an 8.x.x Proxy Service instance.
            This also means you must not attempt to upgrade from 6.x.x straight to 8.x.x.
            You must upgrade to 7.x.x first.
          - Proxy Service instances and agents do not support Auth Service instances that
            are on an older major version, and will fail to connect to older Auth Service
            instances by default. You can override version checks by passing
            `--skip-version-check` when starting agents and Proxy Service instances.
        </Accordion>
      </Tab>

      <Tab title="Teleport Enterprise">
        <Tabs>
          <Tab title="Debian 9+/Ubuntu 16.04+ (apt)">
            ```code
            # Download Teleport's PGP public key
            $ sudo curl https://apt.releases.teleport.dev/gpg \
            -o /usr/share/keyrings/teleport-archive-keyring.asc
            # Source variables about OS version
            $ source /etc/os-release
            # Add the Teleport APT repository for v15. You'll need to update this
            # file for each major release of Teleport.
            $ echo "deb [signed-by=/usr/share/keyrings/teleport-archive-keyring.asc] \
            https://apt.releases.teleport.dev/${ID?} ${VERSION_CODENAME?} stable/v15" \
            | sudo tee /etc/apt/sources.list.d/teleport.list > /dev/null

            $ sudo apt-get update
            $ sudo apt-get install teleport-ent
            ```

            For FedRAMP/FIPS-compliant installations, install the `teleport-ent-fips` package instead:

            ```code
            $ sudo apt-get install teleport-ent-fips
            ```
          </Tab>

          <Tab title="Amazon Linux 2/RHEL 7 (yum)">
            ```code
            # Source variables about OS version
            $ source /etc/os-release
            # Add the Teleport YUM repository for v15. You'll need to update this
            # file for each major release of Teleport.
            # First, get the major version from $VERSION_ID so this fetches the correct
            # package version.
            $ VERSION_ID=$(echo $VERSION_ID | grep -Eo "^[0-9]+")
            $ sudo yum install -y yum-utils
            $ sudo yum-config-manager --add-repo "$(rpm --eval "https://yum.releases.teleport.dev/$ID/$VERSION_ID/Teleport/%{_arch}/stable/v15/teleport.repo")"
            $ sudo yum install teleport-ent
            #
            # Tip: Add /usr/local/bin to path used by sudo (so 'sudo tctl users add' will work as per the docs)
            # echo "Defaults    secure_path = /sbin:/bin:/usr/sbin:/usr/bin:/usr/local/bin" > /etc/sudoers.d/secure_path
            ```

            For FedRAMP/FIPS-compliant installations, install the `teleport-ent-fips` package instead:

            ```code
            $ sudo yum install teleport-ent-fips
            ```
          </Tab>

          <Tab title="Amazon Linux 2/RHEL 7 (zypper)">
            ```code
            # Source variables about OS version
            $ source /etc/os-release
            # Add the Teleport Zypper repository for v15. You'll need to update this
            # file for each major release of Teleport.
            # First, get the OS major version from $VERSION_ID so this fetches the correct
            # package version.
            $ VERSION_ID=$(echo $VERSION_ID | grep -Eo "^[0-9]+")
            # Use zypper to add the teleport RPM repo
            $ sudo zypper addrepo --refresh --repo $(rpm --eval "https://zypper.releases.teleport.dev/$ID/$VERSION_ID/Teleport/%{_arch}/stable/cloud/teleport-zypper.repo")
            $ sudo yum install teleport-ent
            #
            # Tip: Add /usr/local/bin to path used by sudo (so 'sudo tctl users add' will work as per the docs)
            # echo "Defaults    secure_path = /sbin:/bin:/usr/sbin:/usr/bin:/usr/local/bin" > /etc/sudoers.d/secure_path
            ```

            For FedRAMP/FIPS-compliant installations, install the `teleport-ent-fips` package instead:

            ```code
            $ sudo yum install teleport-ent-fips
            ```
          </Tab>

          <Tab title="Amazon Linux 2023/RHEL 8+ (dnf)">
            ```code
            # Source variables about OS version
            $ source /etc/os-release
            # Add the Teleport YUM repository for v15. You'll need to update this
            # file for each major release of Teleport.
            # First, get the major version from $VERSION_ID so this fetches the correct
            # package version.
            $ VERSION_ID=$(echo $VERSION_ID | grep -Eo "^[0-9]+")
            # Use the dnf config manager plugin to add the teleport RPM repo
            $ sudo dnf config-manager --add-repo "$(rpm --eval "https://yum.releases.teleport.dev/$ID/$VERSION_ID/Teleport/%{_arch}/stable/v15/teleport.repo")"

            # Install teleport
            $ sudo dnf install teleport-ent

            # Tip: Add /usr/local/bin to path used by sudo (so 'sudo tctl users add' will work as per the docs)
            # echo "Defaults    secure_path = /sbin:/bin:/usr/sbin:/usr/bin:/usr/local/bin" > /etc/sudoers.d/secure_path
            ```

            For FedRAMP/FIPS-compliant installations, install the `teleport-ent-fips` package instead:

            ```code
            $ sudo dnf install teleport-ent-fips
            ```
          </Tab>

          <Tab title="SLES 12 SP5+ and 15 SP5+ (zypper)">
            ```code
            # Source variables about OS version
            $ source /etc/os-release
            # Add the Teleport Zypper repository.
            # First, get the OS major version from $VERSION_ID so this fetches the correct
            # package version.
            $ VERSION_ID=$(echo $VERSION_ID | grep -Eo "^[0-9]+")
            # Use Zypper to add the teleport RPM repo
            $ sudo zypper addrepo --refresh --repo $(rpm --eval "https://zypper.releases.teleport.dev/$ID/$VERSION_ID/Teleport/%{_arch}/stable/v15/teleport-zypper.repo")

            # Install teleport
            $ sudo zypper install teleport-ent
            ```

            For FedRAMP/FIPS-compliant installations, install the `teleport-ent-fips` package instead:

            ```code
            $ sudo zypper install teleport-ent-fips
            ```
          </Tab>

          <Tab title="Tarball">
            In the example commands below, update `$SYSTEM_ARCH` with the appropriate
            value (`amd64`, `arm64`, or `arm`). All example commands using this variable
            will update after one is filled out.

            ```code
            $ curl https://get.gravitational.com/teleport-ent-v15.0.0-dev-linux-$SYSTEM_ARCH-bin.tar.gz.sha256
            # <checksum> <filename>
            $ curl -O https://cdn.teleport.dev/teleport-ent-v15.0.0-dev-linux-$SYSTEM_ARCH-bin.tar.gz
            $ shasum -a 256 teleport-ent-v15.0.0-dev-linux-$SYSTEM_ARCH-bin.tar.gz
            # Verify that the checksums match
            $ tar -xvf teleport-ent-v15.0.0-dev-linux-$SYSTEM_ARCH-bin.tar.gz
            $ cd teleport-ent
            $ sudo ./install
            ```

            For FedRAMP/FIPS-compliant installations of Teleport Enterprise, package URLs
            will be slightly different:

            ```code
            $ curl https://get.gravitational.com/teleport-ent-v15.0.0-dev-linux-$SYSTEM_ARCH-fips-bin.tar.gz.sha256
            # <checksum> <filename>
            $ curl -O https://cdn.teleport.dev/teleport-ent-v15.0.0-dev-linux-$SYSTEM_ARCH-fips-bin.tar.gz
            $ shasum -a 256 teleport-ent-v15.0.0-dev-linux-$SYSTEM_ARCH-fips-bin.tar.gz
            # Verify that the checksums match
            $ tar -xvf teleport-ent-v15.0.0-dev-linux-$SYSTEM_ARCH-fips-bin.tar.gz
            $ cd teleport-ent
            $ sudo ./install
            ```
          </Tab>
        </Tabs>

        ### OS repository channels

        The following channels are available for APT, YUM, and Zypper repos. They may be used in place of
        `stable/v15` anywhere in the Teleport documentation.

        | Channel name     | Description                                                                  |
        | ---------------- | ---------------------------------------------------------------------------- |
        | `stable/<major>` | Receives releases for the specified major release line, i.e. `v15`           |
        | `stable/cloud`   | Rolling channel that receives releases compatible with current Cloud version |
        | `stable/rolling` | Rolling channel that receives all published Teleport releases                |
      </Tab>

      <Tab title="Teleport Enterprise Cloud">
        <Tabs>
          <Tab title="Debian 9+/Ubuntu 16.04+ (apt)">
            Add the Teleport repository to your repository list:

            ```code
            # Download Teleport's PGP public key
            $ sudo curl https://apt.releases.teleport.dev/gpg \
            -o /usr/share/keyrings/teleport-archive-keyring.asc
            # Source variables about OS version
            $ source /etc/os-release
            # Add the Teleport APT repository for cloud.
            $ echo "deb [signed-by=/usr/share/keyrings/teleport-archive-keyring.asc] \
            https://apt.releases.teleport.dev/${ID?} ${VERSION_CODENAME?} stable/cloud" \
            | sudo tee /etc/apt/sources.list.d/teleport.list > /dev/null

            $ sudo apt-get update
            $ sudo apt-get install teleport-ent=14.3.3
            $ sudo apt-get install teleport-ent-updater
            ```
          </Tab>

          <Tab title="Amazon Linux 2/RHEL 7/CentOS 7 (yum)">
            ```code
            # Source variables about OS version
            $ source /etc/os-release
            # Add the Teleport YUM repository for cloud.
            # First, get the OS major version from $VERSION_ID so this fetches the correct
            # package version.
            $ VERSION_ID=$(echo $VERSION_ID | grep -Eo "^[0-9]+")
            $ sudo yum install -y yum-utils
            $ sudo yum-config-manager --add-repo "$(rpm --eval "https://yum.releases.teleport.dev/$ID/$VERSION_ID/Teleport/%{_arch}/stable/cloud/teleport-yum.repo")"
            $ sudo yum install teleport-ent-14.3.3
            $ sudo yum install teleport-ent-updater
            #
            # Tip: Add /usr/local/bin to path used by sudo (so 'sudo tctl users add' will work as per the docs)
            # echo "Defaults    secure_path = /sbin:/bin:/usr/sbin:/usr/bin:/usr/local/bin" > /etc/sudoers.d/secure_path
            ```
          </Tab>

          <Tab title="Amazon Linux 2023/RHEL 8+ (dnf)">
            ```code
            # Source variables about OS version
            $ source /etc/os-release
            # Add the Teleport YUM repository for cloud.
            # First, get the OS major version from $VERSION_ID so this fetches the correct
            # package version.
            $ VERSION_ID=$(echo $VERSION_ID | grep -Eo "^[0-9]+")
            # Use the dnf config manager plugin to add the teleport RPM repo
            $ sudo dnf config-manager --add-repo "$(rpm --eval "https://yum.releases.teleport.dev/$ID/$VERSION_ID/Teleport/%{_arch}/stable/cloud/teleport-yum.repo")"

            # Install teleport
            $ sudo dnf install teleport-ent-14.3.3
            $ sudo dnf install teleport-ent-updater

            # Tip: Add /usr/local/bin to path used by sudo (so 'sudo tctl users add' will work as per the docs)
            # echo "Defaults    secure_path = /sbin:/bin:/usr/sbin:/usr/bin:/usr/local/bin" > /etc/sudoers.d/secure_path
            ```
          </Tab>

          <Tab title="SLES 12 SP5+ and 15 SP5+ (zypper)">
            ```code
            # Source variables about OS version
            $ source /etc/os-release
            # Add the Teleport Zypper repository for cloud.
            # First, get the OS major version from $VERSION_ID so this fetches the correct
            # package version.
            $ VERSION_ID=$(echo $VERSION_ID | grep -Eo "^[0-9]+")
            # Use Zypper to add the teleport RPM repo
            $ sudo zypper addrepo --refresh --repo $(rpm --eval "https://zypper.releases.teleport.dev/$ID/$VERSION_ID/Teleport/%{_arch}/stable/cloud/teleport-zypper.repo")

            # Install teleport
            $ sudo zypper install teleport-ent=14.3.3
            $ sudo zypper install teleport-ent-updater
            ```
          </Tab>
        </Tabs>

        ### OS repository channels

        The following channels are available for APT, YUM, and Zypper repos. They may be used in place of
        `stable/v15` anywhere in the Teleport documentation.

        | Channel name     | Description                                                                  |
        | ---------------- | ---------------------------------------------------------------------------- |
        | `stable/<major>` | Receives releases for the specified major release line, i.e. `v15`           |
        | `stable/cloud`   | Rolling channel that receives releases compatible with current Cloud version |
        | `stable/rolling` | Rolling channel that receives all published Teleport releases                |

        <Accordion title="Is my Teleport instance compatible with Teleport Enterprise Cloud?">
          Before installing a `teleport` binary with a version besides v14,
          read our compatibility rules to ensure that the binary is compatible with
          Teleport Enterprise Cloud.

          Teleport uses [Semantic Versioning](https://semver.org/). Version numbers
          include a major version, minor version, and patch version, separated by dots.
          When running multiple `teleport` binaries within a cluster, the following rules
          apply:

          - **Patch and minor** versions are always compatible, for example, any 8.0.1
            component will work with any 8.0.3 component and any 8.1.0 component will work
            with any 8.3.0 component.
          - Servers support clients that are one major version behind, but do not support
            clients that are on a newer major version. For example, an 8.x.x Proxy Service
            instance is compatible with 7.x.x agents and 7.x.x `tsh`, but we don't
            guarantee that a 9.x.x agent will work with an 8.x.x Proxy Service instance.
            This also means you must not attempt to upgrade from 6.x.x straight to 8.x.x.
            You must upgrade to 7.x.x first.
          - Proxy Service instances and agents do not support Auth Service instances that
            are on an older major version, and will fail to connect to older Auth Service
            instances by default. You can override version checks by passing
            `--skip-version-check` when starting agents and Proxy Service instances.
        </Accordion>
      </Tab>
    </Tabs>

    On the host where you will run the Teleport Database Service, start Teleport
    with the appropriate configuration.

    Note that a single Teleport process can run multiple different services, for
    example multiple Database Service agents as well as the SSH Service or Application
    Service. The step below will overwrite an existing configuration file, so if
    you're running multiple services add `--output=stdout` to print the config in
    your terminal, and manually adjust `/etc/teleport.yaml`.

    Generate a configuration file at `/etc/teleport.yaml` for the Database Service:

    <Tabs>
      <Tab title="Teleport Enterprise/Enterprise Cloud">
        ```code
        $ sudo teleport db configure create \
           -o file \
           --token=/tmp/token \
           --proxy=teleport.example.com:443 \
           --name=roach \
           --protocol=cockroachdb \
           --uri=roach.example.com:26257 \
           --labels=env=dev 
        ```
      </Tab>

      <Tab title="Teleport Team/Community Edition">
        ```code
        $ sudo teleport db configure create \
           -o file \
           --token=/tmp/token \
           --proxy=mytenant.teleport.sh:443 \
           --name=roach \
           --protocol=cockroachdb \
           --uri=roach.example.com:26257 \
           --labels=env=dev
        ```
      </Tab>
    </Tabs>

    Configure the Teleport Database Service to start automatically when the host boots up by
    creating a systemd service for it. The instructions depend on how you installed
    the Teleport Database Service.

    <Tabs>
      <Tab title="Package Manager">
        On the host where you will run the Teleport Database Service, enable and start Teleport:

        ```code
        $ sudo systemctl enable teleport
        $ sudo systemctl start teleport
        ```
      </Tab>

      <Tab title="TAR Archive">
        On the host where you will run the Teleport Database Service, create a systemd service
        configuration for Teleport, enable the Teleport service, and start Teleport:

        ```code
        $ sudo teleport install systemd -o /etc/systemd/system/teleport.service
        $ sudo systemctl enable teleport
        $ sudo systemctl start teleport
        ```
      </Tab>
    </Tabs>

    You can check the status of the Teleport Database Service with `systemctl status teleport`
    and view its logs with `journalctl -fu teleport`.
  </Tab>

  <Tab title="Kubernetes Cluster">
    Teleport provides Helm charts for installing the Teleport Database Service in Kubernetes Clusters.

    Set up the Teleport Helm repository.

    Allow Helm to install charts that are hosted in the Teleport Helm repository:

    ```code
    $ helm repo add teleport https://charts.releases.teleport.dev
    ```

    Update the cache of charts from the remote repository so you can upgrade to all
    available releases:

    ```code
    $ helm repo update
    ```

    <Tabs>
      <Tab title="Self-Hosted">
        Install the Teleport Kube Agent into your Kubernetes Cluster
        with the Teleport Database Service configuration.

        ```code
        $ JOIN_TOKEN=$(cat /tmp/token)
        $ helm install teleport-kube-agent teleport/teleport-kube-agent \
          --create-namespace \
          --namespace teleport-agent \
          --set roles=db \
          --set proxyAddr=teleport.example.com:443 \
          --set authToken=${JOIN_TOKEN?} \
          --set "databases[0].name=roach" \
          --set "databases[0].uri=roach.example.com:26257" \
          --set "databases[0].protocol=cockroachdb" \
          --set "labels.env=dev" \
          --version 15.0.0-dev
        ```
      </Tab>

      <Tab title="Cloud-Hosted">
        Install the Teleport Kube Agent into your Kubernetes Cluster
        with the Teleport Database Service configuration.

        ```code
        $ JOIN_TOKEN=$(cat /tmp/token)
        $ helm install teleport-kube-agent teleport/teleport-kube-agent \
          --create-namespace \
          --namespace teleport-agent \
          --set roles=db \
          --set proxyAddr=mytenant.teleport.sh:443 \
          --set authToken=${JOIN_TOKEN?} \
          --set "databases[0].name=roach" \
          --set "databases[0].uri=roach.example.com:26257" \
          --set "databases[0].protocol=cockroachdb" \
          --set "labels.env=dev" \
          --version 14.3.3
        ```
      </Tab>
    </Tabs>

    Make sure that the Teleport agent pod is running. You should see one
    `teleport-kube-agent` pod with a single ready container:

    ```code
    $ kubectl -n teleport-agent get pods
    NAME                    READY   STATUS    RESTARTS   AGE
    teleport-kube-agent-0   1/1     Running   0          32s
    ```
  </Tab>
</Tabs>

<Tip>
  A single Teleport process can run multiple services, for example
  multiple Database Service instances as well as other services such the
  SSH Service or Application Service.
</Tip>

## Step 2/4. Create a Teleport user

<Tip>
  To modify an existing user to provide access to the Database Service, see [Database Access Access Controls](/ver/16.x/database-access/rbac)
</Tip>

<Tabs>
  <Tab title="Teleport Team/Community Edition">
    Create a local Teleport user with the built-in `access` role:

    ```code
    $ tctl users add \
      --roles=access \
      --db-users=\* \
      --db-names=\* \
      alice
    ```
  </Tab>

  <Tab title="Teleport Enterprise/Enterprise Cloud">
    Create a local Teleport user with the built-in `access` and `requester` roles:

    ```code
    $ tctl users add \
      --roles=access,requester \
      --db-users=\* \
      --db-names=\* \
      alice
    ```
  </Tab>
</Tabs>

| Flag         | Description                                                                                                                              |
| ------------ | ---------------------------------------------------------------------------------------------------------------------------------------- |
| `--roles`    | List of roles to assign to the user. The builtin `access` role allows them to connect to any database server registered with Teleport.   |
| `--db-users` | List of database usernames the user will be allowed to use when connecting to the databases. A wildcard allows any user.                 |
| `--db-names` | List of logical databases (aka schemas) the user will be allowed to connect to within a database server. A wildcard allows any database. |

<Warning>
  Database names are only enforced for PostgreSQL and MongoDB databases.
</Warning>

For more detailed information about database access controls and how to restrict
access see [RBAC](/ver/16.x/database-access/rbac) documentation.

## Step 3/4. Configure CockroachDB

### Create a CockroachDB user

Teleport uses mutual TLS authentication with CockroachDB. Client certificate authentication is available to all CockroachDB users. If you
don't have one, connect to your Cockroach cluster and create it:

```sql
CREATE USER alice WITH PASSWORD NULL;
```

The `WITH PASSWORD NULL` clause prevents the user from using password auth and
mandates client certificate auth.

Make sure to assign the user proper permissions within the database cluster.
Refer to [Create User](https://www.cockroachlabs.com/docs/stable/create-user.html)
in the CockroachDB documentation for more information.

### Set up mutual TLS

Teleport uses mutual TLS authentication with self-hosted databases. These
databases must be configured with Teleport's certificate authority to be
able to verify client certificates. They also need a certificate/key pair that
Teleport can verify.

If you are using Teleport Cloud, your Teleport user must be allowed to
impersonate the system role `Db` in order to be able to generate the database
certificate.

Include the following `allow` rule in in your Teleport Cloud user's role:

```yaml
allow:
  impersonate:
    users: ["Db"]
    roles: ["Db"]
```

To set up mutual TLS authentication, you need to make sure that:

- Teleport trusts certificates presented by CockroachDB nodes.
- CockroachDB trusts client certificates signed by Teleport.

Generate the secrets by running the following `tctl` command against your
Teleport cluster:

```code
$ tctl auth sign \
    --format=cockroachdb \
    --host=roach.example.com \
    --out=/path/to/cockroach/certs/dir/ \
    --ttl=2190h
```

The command will produce 3 files: `ca.crt` with Teleport's certificate authority
and `node.crt` / `node.key` with the node's certificate and key. Do not rename
them as this is how CockroachDB expects them to be named. See [Node key and certificates](https://www.cockroachlabs.com/docs/v21.1/create-security-certificates-custom-ca#node-key-and-certificates)
for details.

Generate the secrets for each cluster node and make sure to use the hostname
Teleport will be using to connect to the nodes in the `--host` flag.

<Tip>
  You can specify multiple comma-separated addresses e.g. `--host=roach,node-1,192.168.1.1`.
</Tip>

Restart your CockroachDB nodes, passing them the directory with generated secrets
via the `--certs-dir` flag:

```code
$ cockroach start \
    --certs-dir=/path/to/cockroachdb/certs/dir/ \
    # other flags...
```

## Step 4/4. Connect

Log in to your Teleport cluster. Your CockroachDB cluster should appear in the
list of available databases:

<Tabs>
  <Tab title="Self-Hosted">
    ```code
    $ tsh login --proxy=teleport.example.com --user=alice
    $ tsh db ls
    # Name  Description         Labels
    # ----- ------------------- -------
    # roach Example CockroachDB env=dev
    ```
  </Tab>

  <Tab title="Cloud">
    ```code
    $ tsh login --proxy=mytenant.teleport.sh --user=alice
    $ tsh db ls
    # Name  Description         Labels
    # ----- ------------------- -------
    # roach Example CockroachDB env=dev
    ```
  </Tab>
</Tabs>

To retrieve credentials for a database and connect to it:

```code
$ tsh db connect roach
```

You can optionally specify the database name and the user to use by default
when connecting to the database server:

```code
$ tsh db connect --db-user=alice roach
```

<Note>
  Either the `cockroach` or `psql` command-line client should be available in `PATH`
  in order to be able to connect.
</Note>

To log out of the database and remove credentials:

```code
$ tsh db logout roach
```

## Troubleshooting

### Unimplemented client encoding error

You may encounter the `unimplemented client encoding: "sqlascii"` error when
connecting to your CockroachDB database if your `psql` uses SQL\_ASCII encoding.

CockroachDB supports only UTF8 client encoding. To enforce the encoding, set
the following environment variable in the shell running `tsh db connect`:

```bash
export PGCLIENTENCODING='utf-8'
```

If you are connecting the CockroachDB database with Teleport Connect, add the
environment variable to your shell startup scripts and restart the Teleport
Connect app.

## Next steps

{/* lint ignore list-item-spacing remark-lint */}

- Learn how to [restrict access](/ver/16.x/database-access/rbac) to certain users and databases.

{/* lint ignore list-item-spacing remark-lint */}

- Learn more about [dynamic database registration](/ver/16.x/database-access/guides/dynamic-registration).

{/* lint ignore list-item-spacing remark-lint */}

- View the [High Availability (HA)](/ver/16.x/database-access/guides/ha) guide.

{/* lint ignore list-item-spacing remark-lint */}

- See the YAML configuration [reference](/ver/16.x/database-access/reference/configuration) for updating dynamic resource matchers or static database definitions.

{/* lint ignore list-item-spacing remark-lint */}

- Take a look at the full CLI [reference](/ver/16.x/database-access/reference/cli).

- [CockroachDB client authentication](https://www.cockroachlabs.com/docs/stable/authentication.html#client-authentication)
